expo-start.log
Starting project at C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)
Waiting on http://localhost:8081
Logs for your project will appear below.
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS .\index.js ▓▓▓▓▓▓▓▓▓░░░░░░░ 56.3% ( 95/224)
iOS .\index.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 99.4% (698/712)
iOS Bundling failed 7906ms index.js (713 modules)
 ERROR  SyntaxError: C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\src\screens\4.0 home page.jsx: Unexpected token (317:15)

  315 |     marginTop: 8,
  316 |     fontFamily: typography.fontFamily.body,
> 317 |     color: rgba(colors.neutral[50], 0.72),
      |                ^
  318 |     fontSize: 16,
  319 |     lineHeight: 22,
  320 |   },
    at constructor (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:365:19)
    at FlowParserMixin.raise (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:6616:19)
    at FlowParserMixin.unexpected (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:6636:16)
    at FlowParserMixin.flowObjectTypeSemicolon (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2532:12)
    at FlowParserMixin.flowParseObjectType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2445:12)
    at FlowParserMixin.flowParsePrimaryType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2663:21)
    at FlowParserMixin.flowParsePostfixType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2787:21)
    at FlowParserMixin.flowParsePrefixType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2818:19)
    at FlowParserMixin.flowParseAnonFunctionWithoutParens (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2822:24)
    at FlowParserMixin.flowParseIntersectionType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2837:23)
    at FlowParserMixin.flowParseUnionType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2847:23)
    at FlowParserMixin.flowParseType (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2857:23)
    at FlowParserMixin.flowParseTypeInitialiser (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:1853:23)
    at FlowParserMixin.flowParseTypeAnnotation (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2872:32)
    at FlowParserMixin.parseParenItem (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3093:42)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10850:29)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3561:18)
    at C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10817:39
    at FlowParserMixin.allowInAnd (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12443:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10817:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12510:17)
    at FlowParserMixin.parseExprListItem (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12192:18)
    at FlowParserMixin.parseCallExpressionArguments (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11269:22)
    at FlowParserMixin.parseCoverCallAndAsyncArrowHead (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11203:29)
    at FlowParserMixin.parseSubscript (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11137:19)
    at FlowParserMixin.parseSubscript (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3662:18)
    at FlowParserMixin.parseSubscripts (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11111:19)
    at FlowParserMixin.parseSubscripts (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3628:18)
    at FlowParserMixin.parseExprSubscripts (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11102:17)
    at FlowParserMixin.parseUpdate (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11083:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:11063:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10916:61)
    at FlowParserMixin.parseExprOps (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10921:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10898:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10848:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3561:18)
    at C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10817:39
    at FlowParserMixin.allowInAnd (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12438:16)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:10817:17)
    at FlowParserMixin.parseVar (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:13401:91)
    at FlowParserMixin.parseVarStatement (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:13247:10)
    at FlowParserMixin.parseStatementContent (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12868:23)
    at FlowParserMixin.parseStatementLike (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12784:17)
    at FlowParserMixin.parseStatementLike (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:2930:24)
    at FlowParserMixin.parseModuleItem (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12761:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:13333:36)
    at FlowParserMixin.parseBlockBody (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:13326:10)
    at FlowParserMixin.parseProgram (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12639:10)
    at FlowParserMixin.parseTopLevel (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:12629:25)
    at FlowParserMixin.parseTopLevel (C:\Users\ASUS\Desktop\Mobile Assignment\nearlanka-js\node_modules\@babel\parser\lib\index.js:3697:28)
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 1075ms index.js (714 modules)
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 49ms index.js (1 module)
 ERROR  [Error: Element type is invalid: expected a string (for built-in components) or a class/function (for composite components) but got: object. You likely forgot to export your component from the file it's defined in, or you might have mixed up default and named imports.

Check the render method of `App`.]
 WARN  SafeAreaView has been deprecated and will be removed in a future release. Please use 'react-native-safe-area-context' instead. See https://github.com/th3rdwave/react-native-safe-area-context
 ERROR  [ReferenceError: Property 'S' doesn't exist]
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 35ms index.js (1 module)
 WARN  SafeAreaView has been deprecated and will be removed in a future release. Please use 'react-native-safe-area-context' instead. See https://github.com/th3rdwave/react-native-safe-area-context
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 29ms index.js (1 module)
 WARN  SafeAreaView has been deprecated and will be removed in a future release. Please use 'react-native-safe-area-context' instead. See https://github.com/th3rdwave/react-native-safe-area-context
iOS .\index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
iOS Bundled 30ms index.js (1 module)
 WARN  SafeAreaView has been deprecated and will be removed in a future release. Please use 'react-native-safe-area-context' instead. See https://github.com/th3rdwave/react-native-safe-area-context
